--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
     <div id="header-container">
         <h1>The CCZ Friendship Jukebox</h1>
-        <button id="coversBtn" onclick="window.location='covers-new.html'"><i>Covers</i></button>
+        <button id="coversBtn" onclick="window.location='covers.html'"><i>Covers</i></button>
     </div>
 
     <div id="controls">
@@ -594,3 +594,4 @@
     </script>
 </body>
 </html>
+
