--- a/covers.html
+++ b/covers.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>CCZ – Enhanced Covers Jukebox</title>
+<title>CCZ – Covers Jukebox</title>
 <style>
 body {
     background:#1a1a1a; color:white;
