Fix duplicate ID in covers array

--- a/covers.html
+++ b/covers.html
@@ -141,7 +141,7 @@ Now Playing: <span id="nowPlaying" style="color:#f0db4f;font-weight:bold;">...</
 
 <script>
 const covers=[
-    {id:"1",name:"Rintu Boro",song:"Kisi Roz Tumse",artist:"Pardes"}
+    {id:"1",name:"R Boro",song:"Kisi Roz Tumse",artist:"Pardes"}
 ];
 
 const grid=document.getElementById("grid");
