--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             { id: 28, name: "Arunima D", song: "Tum Bin Jiya Jaye", artist: "K S Chithra" },
             { id: 29, name: "Fatima S", song: "Right Here Waiting", artist: "Richard Marx" },
             { id: 30, name: "Nabanita D", song: "I'd love you to want me", artist: "Lobo" },
-            { id: 31, name: "Parveza", song: "Zindagi Kaisi Hain Paheli", artist: "Manna Dey" }
+            { id: 31, name: "Parveza R", song: "Zindagi Kaisi Hain Paheli", artist: "Manna Dey" }
           ];
 
           /* --- The rest of your original JavaScript (playback, skipping, UI, etc.) ---
@@ -594,4 +594,5 @@
     </script>
 </body>
 </html>
+
 
